--- a/stylesPractice.css
+++ b/stylesPractice.css
@@ -95,6 +95,13 @@ section {
     width: 70%;
 }
 
+article {
+    display: contents;
+    margin: 2px;
+
+}
+
+
 #yourname-container {
     display: flex;
     align-items: center;
@@ -104,14 +111,18 @@ input {
     width:20%;
     margin: 2px;
     height:17px;
+    padding:2px;
     font-size: 8px;
+    align-items: center;
 }
 
 button {
     width:50px;
     height:17px;
+    padding: 2px;
     background: transparent;
     border-radius: 5px;
+    font-size: 5px;
 }
 
     
@@ -122,5 +133,8 @@ li {
 
 
 
-
+.horizontal-list { 
+    display: flex;
+    flex-wrap: wrap;
+}
 
